--- a/src/xGadgetron/cGadgetron/CMakeLists.txt
+++ b/src/xGadgetron/cGadgetron/CMakeLists.txt
@@ -84,13 +84,13 @@ target_include_directories(cgadgetron PUBLIC "${cGadgetron_INCLUDE_DIR}")
 target_include_directories(cgadgetron PRIVATE "${FFTW3_INCLUDE_DIR}")
 target_include_directories(cgadgetron PUBLIC "${ISMRMRD_INCLUDE_DIR}")
 if (Gadgetron_USE_CUDA)
+  message(STATUS "Gadgetron is built with CUDA support... looking for CUDA")
   find_package(CUDA)
   if (CUDA_FOUND)
-    message(STATUS "<<<<<<<<<<<<<<<<< CUDA FOUND >>>>>>>>>>>>>>>>>>>>>")
-    message(STATUS "Will enable CUDA dependencies where possible.")
+    message(STATUS "CUDA is found, adding CUDA includes for RPE encoding.")
     target_include_directories(cgadgetron PUBLIC "${CUDA_INCLUDE_DIRS}")
   else()
-	  message(FATAL_ERROR "CUDA not found and Gadgetron is built with CUDA. Cannot compile.")
+    message(FATAL_ERROR "CUDA not found and Gadgetron is built with CUDA. Cannot compile.")
   endif()
 endif()
 
